--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,14 +32,17 @@ dependencies {
     compile 'com.github.d-max:spots-dialog:0.7@aar'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-scalars:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile 'uk.co.chrisjenx:calligraphy:2.3.0'
     compile 'com.rengwuxian.materialedittext:library:2.1.4'
-    compile 'com.firebase:geofire-android:2.3.1'
+    compile 'com.firebase:geofire-android:2.1.1'
     compile 'com.github.glomadrian:MaterialAnimatedSwitch:1.1@aar'
     implementation 'com.android.support:design:26.+'
     implementation 'com.google.firebase:firebase-core:12.0.1'
     implementation 'com.google.firebase:firebase-database:12.0.1'
     implementation 'com.google.firebase:firebase-auth:12.0.1'
+    implementation 'com.google.firebase:firebase-messaging:12.0.1'
     implementation 'com.android.support:cardview-v7:26.+'
+    implementation 'com.google.code.gson:gson:2.8.2'
 }
 apply plugin: 'com.google.gms.google-services'
